# ArteFact

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  comprehensive_test.py  downloader.py  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-opt.txt  requirements.txt  setup.cfg  setup.py  test_artefact.py
.github/workflows/: ci.yml
Artefact/: __init__.py  core.py  error_handler.py
Artefact/modules/: __init__.py  carving.py  hasher.py  liveops.py  memory.py  metadata.py  mount.py  timeline.py
artefact/: __init__.py  __main__.py  cli.py  console.py  core.py  error_handler.py  output.py  plugins.py
artefact/modules/: __init__.py  carving.py  diskimage.py  hasher.py  liveops.py  memory.py  metadata.py  mount.py  timeline.py
artefact/plugins/: __init__.py
docs/: Roadmap.md  SECURITY.md  coverage.md  disk_image_module.md  installation.md  kickstart.md  threat_model.md  usage.md
src/carving/: file_carver.py
src/carving/test_files/: sample.img
tests/: README.md  conftest.py  test_carving.py  test_hasher.py  test_mem.py  test_metadata.py  test_timeline.py
tests/integration/: test_module_integration.py
tests/system/: critical_tester.py  test_end_to_end.py
tests/unit/: test_hasher.py  test_mem.py  test_metadata.py  test_timeline.py
