[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artefact"
version = "0.4.0"
description = "A modular digital forensics toolkit with memory analysis, file carving, hashing, and timeline generation."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Rizzy1857", email = "Rizzy1857@gmail.com" }
]
keywords = ["CLI", "hashing", "toolkit", "rich", "forensics", "memory analysis", "carving"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Topic :: Security",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Forensics"
]
dependencies = [
    "rich>=13.0.0",
    "argparse",
    "python-dateutil"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Rizzy1857/ArteFact"
Documentation = "https://github.com/Rizzy1857/ArteFact/wiki"
Source = "https://github.com/Rizzy1857/ArteFact"
Tracker = "https://github.com/Rizzy1857/ArteFact/issues"

[project.scripts]
artefact = "artefact.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--strict-markers --disable-warnings"
testpaths = [
    "tests"
]
[tool.setuptools.packages.find]
include = ["artefact*"]